feat(snippets): add more snnipets

--- a/.config/nvim/snippets/package.json
+++ b/.config/nvim/snippets/package.json
@@ -9,6 +9,12 @@
           "typescriptreact"
         ],
         "path": "./react.json"
+      },
+      {
+        "language": [
+          "go"
+        ],
+        "path": "./go.json"
       }
     ]
   }
