--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -18,6 +18,7 @@
     ~/themes.gitconfig: git/themes.gitconfig
     ~/.config/nvim: .config/nvim
     ~/.config/gh/config.yml: .config/gh/config.yml
+    ~/.config/pgcli/config: .config/pgcli/config
 
 - shell:
     - [git submodule update --init --recursive, Installing submodules]
