--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = dotbot
 	url = https://github.com/anishathalye/dotbot
 	ignore = dirty
+[submodule "update-golang"]
+	path = update-golang
+	url = https://github.com/udhos/update-golang
