muita coisa mudou

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -32,7 +32,10 @@
   c = commit -m
 
 [delta]
-  navigate = true
+  line-numbers = true
+  side-by-side = false
+
+  file-modified-label = modified:
  
 [interactive]
   diffFilter = delta --color-only
