--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -42,20 +42,20 @@ bind l select-pane -R
 bind C-p previous-window
 bind C-n next-window
 
-# TokyoNight colors for Tmux
+# Thanos colors for Tmux
 
-set -g mode-style "fg=#7aa2f7,bg=#3b4261"
+set -g mode-style "fg=#c4c5b5,bg=#181b28"
 
-set -g message-style "fg=#7aa2f7,bg=#3b4261"
-set -g message-command-style "fg=#7aa2f7,bg=#3b4261"
+set -g message-style "fg=#c4c5b5,bg=#181b28"
+set -g message-command-style "fg=#c4c5b5,bg=#181b28"
 
-set -g pane-border-style "fg=#3b4261"
-set -g pane-active-border-style "fg=#7aa2f7"
+set -g pane-border-style "fg=#181b28"
+set -g pane-active-border-style "fg=#c4c5b5"
 
 set -g status "on"
 set -g status-justify "left"
 
-set -g status-style "fg=#7aa2f7,bg=#1f2335"
+set -g status-style "fg=#c4c5b5,bg=#181B28"
 
 set -g status-left-length "100"
 set -g status-right-length "100"
@@ -63,11 +63,42 @@ set -g status-right-length "100"
 set -g status-left-style NONE
 set -g status-right-style NONE
 
-set -g status-left "#[fg=#1D202F,bg=#7aa2f7,bold] #S #[fg=#7aa2f7,bg=#1f2335,nobold,nounderscore,noitalics]"
-set -g status-right "#[fg=#1f2335,bg=#1f2335,nobold,nounderscore,noitalics]#[fg=#7aa2f7,bg=#1f2335] #{prefix_highlight} #[fg=#3b4261,bg=#1f2335,nobold,nounderscore,noitalics]#[fg=#7aa2f7,bg=#3b4261] %Y-%m-%d  %I:%M %p #[fg=#7aa2f7,bg=#3b4261,nobold,nounderscore,noitalics]#[fg=#1D202F,bg=#7aa2f7,bold] #h "
+set -g status-left "#[fg=#c4c5b5,bg=#9D65FF,bold] #S #[fg=#9D65FF,bg=#181b28,nobold,nounderscore,noitalics]"
+set -g status-right "#[fg=#181B28,bg=#181b28,nobold,nounderscore,noitalics]#[fg=#9D65FF,bg=#181B28] #{prefix_highlight} #[fg=#2A3049,bg=#181B28,nobold,nounderscore,noitalics]#[fg=#58EBD7,bg=#2A3049] %Y-%m-%d  %I:%M %p #[fg=#9D65FF,bg=#2A3049,nobold,nounderscore,noitalics]#[fg=#C4C5B5,bg=#9D65FF,bold] #h "
 
-setw -g window-status-activity-style "underscore,fg=#a9b1d6,bg=#1f2335"
+setw -g window-status-activity-style "underscore,fg=#a9b1d6,bg=#4B5783"
 setw -g window-status-separator ""
-setw -g window-status-style "NONE,fg=#a9b1d6,bg=#1f2335"
-setw -g window-status-format "#[fg=#1f2335,bg=#1f2335,nobold,nounderscore,noitalics]#[default] #I  #W #F #[fg=#1f2335,bg=#1f2335,nobold,nounderscore,noitalics]"
-setw -g window-status-current-format "#[fg=#1f2335,bg=#3b4261,nobold,nounderscore,noitalics]#[fg=#7aa2f7,bg=#3b4261,bold] #I  #W #F #[fg=#3b4261,bg=#1f2335,nobold,nounderscore,noitalics]"
+setw -g window-status-style "NONE,fg=#58ebd7,bg=#4B5783"
+setw -g window-status-format "#[fg=#1f2335,bg=#58ebd7,nobold,nounderscore,noitalics]#[default] #I  #W #F #[fg=#151825,bg=#151825,nobold,nounderscore,noitalics]"
+setw -g window-status-current-format "#[fg=#1f2335,bg=#2A3049,nobold,nounderscore,noitalics]#[fg=#58EBD7,bg=#2A3049,bold] #I  #W #F #[fg=#2A3049,bg=#181b28,nobold,nounderscore,noitalics]"
+
+
+# TokyoNight colors for Tmux
+
+# set -g mode-style "fg=#7aa2f7,bg=#3b4261"
+
+# set -g message-style "fg=#7aa2f7,bg=#3b4261"
+# set -g message-command-style "fg=#7aa2f7,bg=#3b4261"
+
+# set -g pane-border-style "fg=#3b4261"
+# set -g pane-active-border-style "fg=#7aa2f7"
+
+# set -g status "on"
+# set -g status-justify "left"
+
+# set -g status-style "fg=#7aa2f7,bg=#1f2335"
+
+# set -g status-left-length "100"
+# set -g status-right-length "100"
+
+# set -g status-left-style NONE
+# set -g status-right-style NONE
+
+# set -g status-left "#[fg=#15161E,bg=#7aa2f7,bold] #S #[fg=#7aa2f7,bg=#1f2335,nobold,nounderscore,noitalics]"
+# set -g status-right "#[fg=#1f2335,bg=#1f2335,nobold,nounderscore,noitalics]#[fg=#7aa2f7,bg=#1f2335] #{prefix_highlight} #[fg=#3b4261,bg=#1f2335,nobold,nounderscore,noitalics]#[fg=#7aa2f7,bg=#3b4261] %Y-%m-%d  %I:%M %p #[fg=#7aa2f7,bg=#3b4261,nobold,nounderscore,noitalics]#[fg=#15161E,bg=#7aa2f7,bold] #h "
+
+# setw -g window-status-activity-style "underscore,fg=#a9b1d6,bg=#1f2335"
+# setw -g window-status-separator ""
+# setw -g window-status-style "NONE,fg=#a9b1d6,bg=#1f2335"
+# setw -g window-status-format "#[fg=#1f2335,bg=#1f2335,nobold,nounderscore,noitalics]#[default] #I  #W #F #[fg=#1f2335,bg=#1f2335,nobold,nounderscore,noitalics]"
+# setw -g window-status-current-format "#[fg=#1f2335,bg=#3b4261,nobold,nounderscore,noitalics]#[fg=#7aa2f7,bg=#3b4261,bold] #I  #W #F #[fg=#3b4261,bg=#1f2335,nobold,nounderscore,noitalics]"
