--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -63,14 +63,14 @@ set -g status-right-length "100"
 set -g status-left-style NONE
 set -g status-right-style NONE
 
-set -g status-left "#[fg=#c4c5b5,bg=#9D65FF,bold] #S #[fg=#9D65FF,bg=#181b28,nobold,nounderscore,noitalics]"
-set -g status-right "#[fg=#181B28,bg=#181b28,nobold,nounderscore,noitalics]#[fg=#9D65FF,bg=#181B28] #{prefix_highlight} #[fg=#2A3049,bg=#181B28,nobold,nounderscore,noitalics]#[fg=#58EBD7,bg=#2A3049] %Y-%m-%d  %I:%M %p #[fg=#9D65FF,bg=#2A3049,nobold,nounderscore,noitalics]#[fg=#C4C5B5,bg=#9D65FF,bold] #h "
+set -g status-left "#[fg=#c4c5b5,bg=#9D65FF,bold] #S #[fg=#9D65FF,bg=#181B28,nobold,nounderscore,noitalics]"
+set -g status-right "#[fg=#181B28,bg=#181B28,nobold,nounderscore,noitalics]#[fg=#9D65FF,bg=#181B28] #{prefix_highlight} #[fg=#2A3049,bg=#181B28,nobold,nounderscore,noitalics]#[fg=#58EBD7,bg=#2A3049] %Y-%m-%d  %I:%M %p #[fg=#9D65FF,bg=#2A3049,nobold,nounderscore,noitalics]#[fg=#C4C5B5,bg=#9D65FF,bold] #h "
 
-setw -g window-status-activity-style "underscore,fg=#a9b1d6,bg=#4B5783"
+setw -g window-status-activity-style "underscore,fg=#2A3049,bg=#151825"
 setw -g window-status-separator ""
-setw -g window-status-style "NONE,fg=#58ebd7,bg=#4B5783"
-setw -g window-status-format "#[fg=#1f2335,bg=#58ebd7,nobold,nounderscore,noitalics]#[default] #I  #W #F #[fg=#151825,bg=#151825,nobold,nounderscore,noitalics]"
-setw -g window-status-current-format "#[fg=#1f2335,bg=#2A3049,nobold,nounderscore,noitalics]#[fg=#58EBD7,bg=#2A3049,bold] #I  #W #F #[fg=#2A3049,bg=#181b28,nobold,nounderscore,noitalics]"
+setw -g window-status-style "NONE,fg=#58ebd7,bg=#2A3049"
+setw -g window-status-format "#[fg=#181B28,bg=#181B28,nobold,nounderscore,noitalics]#[default] #I  #W #F #[fg=#181B28,bg=#181B28,nobold,nounderscore,noitalics]"
+setw -g window-status-current-format "#[fg=#181B28,bg=#2A3049,nobold,nounderscore,noitalics]#[fg=#58EBD7,bg=#2A3049,bold] #I  #W #F #[fg=#2A3049,bg=#181B28,nobold,nounderscore,noitalics]"
 
 
 # TokyoNight colors for Tmux
