--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,104 +1,80 @@
-set -g terminal-overrides ',xterm-256color:Tc'
-set -g default-terminal "tmux-256color"
+# Configured by Rob Muhlestein (twitch.tv/rwxrob)
+# This file is copyright free (public domain).
+
+# fix accidently typing accent characters, etc.
+# by forcing the terminal to not wait around
+# (every single tmux file should have this)
+set -sg escape-time 0
+
+set -g status-position top
+set -g status-interval 1
+set -g status-style "bg=default"
+set -g status-bg default
+# set -g status-justify centre
+
+set -g status-right "#(pomo)   "
+set -g status-right-style "fg=#928374,bold"
+set -g status-right-style "fg=#665c54,bold"
+set -g status-left-length 100
+set -g status-left "#(marquee)"
+# set -g status-left-style "fg=#665c54"
+set -g message-style "fg=brightwhite"
+# set -g window-status-format ""
+# set -g window-status-current-format ""
+
+# pane colors and display
+#set -g default-terminal "xterm-256color"          # very wrong indeed
+# set -ga terminal-overrides ",xterm-256color*:Tc"  # very wrong indeed
 set -g default-terminal "screen-256color"
-set -as terminal-overrides ',xterm*:sitm=\E[3m'
-# set-option -ga terminal-overrides ",xterm-256color:Tc"
 
-set-option -g mouse on
+# create more intuitive split key combos (same as modern screen)
+unbind |
+bind | split-window -h
+bind '\' split-window -h
+bind 'C-\' split-window -h
+unbind -
+bind - split-window -v
+unbind _
+bind _ split-window -v
 
-# set -g status-left ''
-set -g status-right ''
+# vi for copy mode
+setw -g mode-keys vi
 
-set -g message-style bg='#1d2021',fg='#C4C5B5'
-set -g status-style bg='#1d2021',fg='#C4C5B5'
+# vi for command status
+set -g status-keys vi
 
-set-window-option -g window-status-style fg='#5F6167',bg='#1d2021'
-set-window-option -g window-status-current-style fg='#FF00AA',bg='#1d2021'
+# vi keys to resize
+bind -r C-k resize-pane -U 2
+bind -r C-j resize-pane -D 1
+bind -r C-h resize-pane -L 1
+bind -r C-l resize-pane -R 1
 
-# split panes using | and -
-bind-key v split-window -h
-# bind-key s split-window -v
-unbind '"'
-unbind %
+# vi keys to navigate panes
+bind -r k select-pane -U
+bind -r j select-pane -D
+bind -r h select-pane -L
+bind -r l select-pane -R
 
-set -g status-justify centre
-set-option -g status-position top
+# avoid cursor movement messing with resize
+set -g repeat-time 200
 
+# colors, clock, and stuff
+#set -g clock-mode-style 12
+setw -g clock-mode-colour cyan 
 set -g base-index 1
 setw -g pane-base-index 1
 
-# Vim style pane selection
-bind h select-pane -L
-bind j select-pane -D 
-bind k select-pane -U
-bind l select-pane -R
+# die, die, die (just be careful, right next to C-c)
+bind -r C-x confirm kill-server
+bind -r x kill-pane
 
-# Use Alt-vim keys without prefix key to switch panes
-# bind -n M-h select-pane -L
-# bind -n M-j select-pane -D 
-# bind -n M-k select-pane -U
-# bind -n M-l select-pane -R
+# color the pane borders nearly invisible
+# (when not using hacked tmux without them)
+set -g pane-border-style "fg=#1d2021,bg=#1d2021"
+set -g pane-active-border-style "fg=#1d2021,bg=#1d2021"
 
-bind C-p previous-window
-bind C-n next-window
+# color of the window selection background
+set -g mode-style "bg=black,reverse"
 
-# Thanos colors for Tmux
-
-set -g mode-style "fg=#c4c5b5,bg=#181b28"
-
-set -g message-style "fg=#c4c5b5,bg=#181b28"
-set -g message-command-style "fg=#c4c5b5,bg=#181b28"
-
-set -g pane-border-style "fg=#181b28"
-set -g pane-active-border-style "fg=#c4c5b5"
-
-set -g status "on"
-set -g status-justify "left"
-
-set -g status-style "fg=#c4c5b5,bg=#181B28"
-
-set -g status-left-length "100"
-set -g status-right-length "100"
-
-set -g status-left-style NONE
-set -g status-right-style NONE
-
-set -g status-left "#[fg=#c4c5b5,bg=#9D65FF,bold] #S #[fg=#9D65FF,bg=#181B28,nobold,nounderscore,noitalics]"
-set -g status-right "#[fg=#181B28,bg=#181B28,nobold,nounderscore,noitalics]#[fg=#9D65FF,bg=#181B28] #{prefix_highlight} #[fg=#2A3049,bg=#181B28,nobold,nounderscore,noitalics]#[fg=#58EBD7,bg=#2A3049] %Y-%m-%d  %I:%M %p #[fg=#9D65FF,bg=#2A3049,nobold,nounderscore,noitalics]#[fg=#C4C5B5,bg=#9D65FF,bold] #h "
-
-setw -g window-status-activity-style "underscore,fg=#2A3049,bg=#151825"
-setw -g window-status-separator ""
-setw -g window-status-style "NONE,fg=#58ebd7,bg=#2A3049"
-setw -g window-status-format "#[fg=#181B28,bg=#181B28,nobold,nounderscore,noitalics]#[default] #I  #W #F #[fg=#181B28,bg=#181B28,nobold,nounderscore,noitalics]"
-setw -g window-status-current-format "#[fg=#181B28,bg=#2A3049,nobold,nounderscore,noitalics]#[fg=#58EBD7,bg=#2A3049,bold] #I  #W #F #[fg=#2A3049,bg=#181B28,nobold,nounderscore,noitalics]"
-
-
-# TokyoNight colors for Tmux
-
-# set -g mode-style "fg=#7aa2f7,bg=#3b4261"
-
-# set -g message-style "fg=#7aa2f7,bg=#3b4261"
-# set -g message-command-style "fg=#7aa2f7,bg=#3b4261"
-
-# set -g pane-border-style "fg=#3b4261"
-# set -g pane-active-border-style "fg=#7aa2f7"
-
-# set -g status "on"
-# set -g status-justify "left"
-
-# set -g status-style "fg=#7aa2f7,bg=#1f2335"
-
-# set -g status-left-length "100"
-# set -g status-right-length "100"
-
-# set -g status-left-style NONE
-# set -g status-right-style NONE
-
-# set -g status-left "#[fg=#15161E,bg=#7aa2f7,bold] #S #[fg=#7aa2f7,bg=#1f2335,nobold,nounderscore,noitalics]"
-# set -g status-right "#[fg=#1f2335,bg=#1f2335,nobold,nounderscore,noitalics]#[fg=#7aa2f7,bg=#1f2335] #{prefix_highlight} #[fg=#3b4261,bg=#1f2335,nobold,nounderscore,noitalics]#[fg=#7aa2f7,bg=#3b4261] %Y-%m-%d  %I:%M %p #[fg=#7aa2f7,bg=#3b4261,nobold,nounderscore,noitalics]#[fg=#15161E,bg=#7aa2f7,bold] #h "
-
-# setw -g window-status-activity-style "underscore,fg=#a9b1d6,bg=#1f2335"
-# setw -g window-status-separator ""
-# setw -g window-status-style "NONE,fg=#a9b1d6,bg=#1f2335"
-# setw -g window-status-format "#[fg=#1f2335,bg=#1f2335,nobold,nounderscore,noitalics]#[default] #I  #W #F #[fg=#1f2335,bg=#1f2335,nobold,nounderscore,noitalics]"
-# setw -g window-status-current-format "#[fg=#1f2335,bg=#3b4261,nobold,nounderscore,noitalics]#[fg=#7aa2f7,bg=#3b4261,bold] #I  #W #F #[fg=#3b4261,bg=#1f2335,nobold,nounderscore,noitalics]"
+# reload configuration
+bind -r r source-file ~/.tmux.conf
