--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -5,6 +5,7 @@
 # by forcing the terminal to not wait around
 # (every single tmux file should have this)
 set -sg escape-time 0
+set -g mouse on
 
 set -g status-position top
 set -g status-interval 1
