--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -13,7 +13,7 @@ set -g status-style "bg=default"
 set -g status-bg default
 # set -g status-justify centre
 
-set -g status-right "#(pomo)   "
+set -g status-right "#(pomo)"
 set -g status-right-style "fg=#928374,bold"
 set -g status-right-style "fg=#665c54,bold"
 set -g status-left-length 100
@@ -25,7 +25,7 @@ set -g message-style "fg=brightwhite"
 
 # pane colors and display
 #set -g default-terminal "xterm-256color"          # very wrong indeed
-# set -ga terminal-overrides ",xterm-256color*:Tc"  # very wrong indeed
+set -ga terminal-overrides ",xterm-256color*:Tc"  # very wrong indeed
 set -g default-terminal "screen-256color"
 
 # create more intuitive split key combos (same as modern screen)
